Fix headless GUI validation boundaries
Refactor non-entry System.exit paths, guard display-bound tests, and run CI validation under Xvfb with a dev profile opt-in for GUI runs.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>